--- a/rtmp_server/nginx.conf
+++ b/rtmp_server/nginx.conf
@@ -13,42 +13,29 @@ rtmp {
             live on;
             record off;
 
-            # Simple stream key authentication
-            allow publish 127.0.0.1;
-            deny publish all;
-
-            # HLS settings
-            hls on;
-            hls_path /tmp/hls;
-            hls_fragment 3;
-            hls_playlist_length 60;
+            # Allow RTMP over HTTP
+            allow publish all;
+            allow play all;
         }
     }
 }
 
 http {
-    sendfile on;
-    tcp_nopush on;
-    aio on;
-    directio 512;
-    default_type application/octet-stream;
-
     server {
-        listen 80;
+        listen 8080;
 
         location / {
-            root /usr/share/nginx/html;
-            index index.html index.htm;
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
         }
 
-        location /hls {
-            types {
-                application/vnd.apple.mpegurl m3u8;
-                video/mp2t ts;
-            }
-            root /tmp;
-            add_header Cache-Control no-cache;
-            add_header Access-Control-Allow-Origin *;
+        location /stat {
+            rtmp_stat all;
+            rtmp_stat_stylesheet stat.xsl;
+        }
+
+        location /stat.xsl {
+            root /usr/local/nginx/html;
         }
     }
 }
