--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,28 @@
-# Backend Dockerfile for FastAPI
-FROM python:3.11-slim AS build
+# Use official Python image as base
+FROM python:3.11-slim
 
+# Set working directory
 WORKDIR /app
 
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy requirements file
 COPY backend/requirements.txt .
 
+# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY backend/ .
+# Copy backend source code
+COPY backend/ ./backend/
 
+# Expose port
 EXPOSE 8000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Healthcheck endpoint
+HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 CMD curl -f http://localhost:8000/health || exit 1
+
+# Command to run the FastAPI app with Uvicorn
+CMD ["uvicorn", "backend.api.__init__:app", "--host", "0.0.0.0", "--port", "8000"]
