--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Environment variables example for Bulo.Cloud Sentinel
 
 # Backend
-DATABASE_URL=sqlite:///./app.db
-JWT_SECRET=your_jwt_secret_here
+DATABASE_URL=sqlite:///./placeholder.db
+JWT_SECRET=placeholder_jwt_secret
 
 # Frontend
 VITE_BACKEND_URL=http://localhost:8000
