--- a/anti_jamming_service/requirements.txt
+++ b/anti_jamming_service/requirements.txt
@@ -1,39 +1,40 @@
 # FastAPI and web server
-fastapi>=0.68.0
-uvicorn>=0.15.0
-starlette>=0.14.2
-pydantic>=1.8.2
+fastapi==0.115.7
+uvicorn==0.34.0
+starlette==0.37.2
+pydantic==2.10.6
 
 # Hardware interfaces
-pyrtlsdr>=0.2.91
-pyusb>=1.2.1
-pyserial>=3.5
-pyLoRa>=0.3.1
+pyrtlsdr==0.2.93
+pyusb==1.2.1
+pyserial==3.5
+pyLoRa==0.3.1
 
 # Signal processing
-numpy>=1.21.2
-scipy>=1.7.1
-matplotlib>=3.4.3
+numpy==1.26.4
+scipy==1.13.1
+matplotlib==3.9.0
 
 # GNSS processing
-gnss-sdr-python>=0.1.0
-dronekit>=2.9.2
+gnss-sdr-python==0.1.0
+dronekit==2.9.2
 
 # Security
-cryptography>=35.0.0
-hvac>=0.11.2  # HashiCorp Vault client
-python-jose>=3.3.0  # JWT
-passlib>=1.7.4  # Password hashing
+cryptography==42.0.8
+hvac==1.2.1  # HashiCorp Vault client
+python-jose==3.3.0  # JWT
+passlib==1.7.4  # Password hashing
+python-magic==0.4.27
 
 # Messaging
-pika>=1.2.0  # RabbitMQ client
+pika==1.3.2  # RabbitMQ client
 
 # Utilities
-pyyaml>=6.0
-python-dotenv>=0.19.1
-tenacity>=8.0.1  # Retry logic
+pyyaml==6.0.1
+python-dotenv==1.0.1
+tenacity==8.2.3  # Retry logic
 
 # Testing
-pytest>=6.2.5
-pytest-asyncio>=0.15.1
-httpx>=0.19.0  # For testing FastAPI
+pytest==8.0.2
+pytest-asyncio==0.23.5
+httpx==0.27.0  # For testing FastAPI
