--- a/sentinelweb/.env.example
+++ b/sentinelweb/.env.example
@@ -5,8 +5,8 @@ HOST=0.0.0.0
 PORT=3000
 
 # Database
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_USER=placeholderusername
+POSTGRES_PASSWORD=placeholderpassword
 POSTGRES_DB=sentinelweb
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
@@ -14,16 +14,17 @@ POSTGRES_PORT=5432
 # Redis
 REDIS_HOST=redis
 REDIS_PORT=6379
-REDIS_PASSWORD=
+REDIS_PASSWORD=placeholderpassword
 
 # Authentication
-JWT_SECRET=supersecretkey
+# Generate a secure random key with: openssl rand -hex 32
+JWT_SECRET=
 JWT_ALGORITHM=HS256
 JWT_EXPIRATION_MINUTES=1440
 
 # BuloCloudSentinel Integration
 BULOCLOUD_API_URL=http://bulocloud-api:8000
-BULOCLOUD_API_KEY=your-api-key-here
+BULOCLOUD_API_KEY=
 DRONECORE_URL=http://dronecore:8001
 RTMP_SERVER=rtmp://rtmp-server:1935
 
