--- a/tactical_capabilities/tacs/kubernetes/secrets.yaml
+++ b/tactical_capabilities/tacs/kubernetes/secrets.yaml
@@ -5,13 +5,14 @@ metadata:
   namespace: bulo-sentinel
 type: Opaque
 data:
-  # These are example values - in production, use proper secret management
-  postgres_user: cG9zdGdyZXM=  # postgres
-  postgres_password: cG9zdGdyZXM=  # postgres
-  secret_key: c3VwZXJzZWNyZXRrZXk=  # supersecretkey
-  rabbitmq_user: Z3Vlc3Q=  # guest
-  rabbitmq_password: Z3Vlc3Q=  # guest
-  redis_password: ""
-  s3_access_key: bWluaW8=  # minio
-  s3_secret_key: bWluaW8xMjM=  # minio123
-  keycloak_client_secret: ""
+  # These are placeholder values - in production, use proper secret management
+  # Values should be base64 encoded
+  postgres_user: cGxhY2Vob2xkZXJ1c2VybmFtZQ==  # placeholderusername
+  postgres_password: cGxhY2Vob2xkZXJwYXNzd29yZA==  # placeholderpassword
+  secret_key: ${SECRET_KEY_BASE64}  # Should be at least 32 chars, base64 encoded
+  rabbitmq_user: cGxhY2Vob2xkZXJ1c2VybmFtZQ==  # placeholderusername
+  rabbitmq_password: cGxhY2Vob2xkZXJwYXNzd29yZA==  # placeholderpassword
+  redis_password: cGxhY2Vob2xkZXJwYXNzd29yZA==  # placeholderpassword
+  s3_access_key: cGxhY2Vob2xkZXJ1c2VybmFtZQ==  # placeholderusername
+  s3_secret_key: cGxhY2Vob2xkZXJwYXNzd29yZA==  # placeholderpassword
+  keycloak_client_secret: ${KEYCLOAK_CLIENT_SECRET_BASE64}  # Should be base64 encoded
