--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,20 @@
 # Database
-DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/sentinelweb
+# Format: postgresql+asyncpg://username:password@host:port/dbname
+DATABASE_URL=postgresql+asyncpg://placeholderusername:placeholderpassword@db:5432/sentinelweb
 
 # Redis
-REDIS_URL=redis://redis:6379/0
+# Format: redis://[[username]:[password]]@host:port/db
+REDIS_URL=redis://:placeholderpassword@redis:6379/0
 
 # JWT
-JWT_SECRET=your-secret-key-here
+# Generate a secure key with: openssl rand -hex 32
+JWT_SECRET=
 JWT_ALGORITHM=HS256
 JWT_EXPIRATION_MINUTES=1440
 
 # BuloCloudSentinel API
 SENTINEL_API_URL=http://bulocloud-sentinel-api:8000
-SENTINEL_API_TOKEN=your-api-token-here
+SENTINEL_API_TOKEN=
 
 # CORS
 CORS_ORIGINS=http://localhost:3000,http://frontend:3000
