--- a/sentinelweb/docker-compose.dev.yml
+++ b/sentinelweb/docker-compose.dev.yml
@@ -14,8 +14,8 @@ services:
       - PORT=3000
       - POSTGRES_HOST=db
       - POSTGRES_PORT=5432
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=${POSTGRES_USER:-postgres}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
       - POSTGRES_DB=sentinelweb
       - REDIS_HOST=redis
       - REDIS_PORT=6379
@@ -46,8 +46,8 @@ services:
     container_name: sentinelweb-db
     restart: unless-stopped
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=${POSTGRES_USER:-postgres}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
       - POSTGRES_DB=sentinelweb
     volumes:
       - postgres_data:/var/lib/postgresql/data
