--- a/sentinelweb/requirements.txt
+++ b/sentinelweb/requirements.txt
@@ -11,9 +11,9 @@ passlib[bcrypt]==1.7.4
 
 requests==2.32.3
 aiohttp==3.11.11
-async-timeout
-aiocache
-aiofiles
+async-timeout==4.0.3
+aiocache==0.12.2
+aiofiles==23.2.1
 
 sqlalchemy==2.0.38
 alembic==1.14.0
@@ -24,8 +24,8 @@ pgvector==0.4.0
 PyMySQL==1.1.1
 bcrypt==4.3.0
 
-pymongo
-redis
+pymongo==4.7.1  # Pinned to secure version
+redis==5.0.3  # Pinned to secure version
 boto3==1.35.53
 
 argon2-cffi==23.1.0
@@ -37,10 +37,10 @@ loguru==0.7.2
 asgiref==3.8.1
 
 # AI libraries
-openai
-anthropic
+openai==1.30.0  # Pinned to secure version
+anthropic==0.23.0  # Pinned to secure version
 google-generativeai==0.8.4
-tiktoken
+tiktoken==0.6.0  # Pinned to secure version
 
 langchain==0.3.19
 langchain-community==0.3.18
