--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -21,7 +21,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install safety bandit
-          pip install -r requirements-secure.txt
+          if [ -f requirements-secure.txt ]; then
+            pip install -r requirements-secure.txt
+          else
+            pip install -r requirements.txt
+          fi
 
       - name: Run safety check
         run: |
@@ -90,7 +94,7 @@ jobs:
           path: trivy-results.json
 
       - name: Send notification
-        if: always()
+        if: ${{ always() && secrets.SLACK_WEBHOOK != '' }}
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
@@ -100,3 +104,4 @@ jobs:
           SLACK_MESSAGE: 'Security scan completed'
           SLACK_TITLE: Security Scan Results
           SLACK_USERNAME: GitHub Actions
+        continue-on-error: true
