Fix CodeQL warnings: Add explicit permissions to all GitHub Actions workflows following the principle of least privilege

--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -8,6 +8,11 @@ on:
   schedule:
     - cron: '0 0 * * *'  # Run daily at midnight
 
+# Define required permissions for this workflow
+permissions:
+  contents: read  # Need read access to repository contents
+  security-events: write  # Need write access to upload security scan results
+
 jobs:
   bandit:
     runs-on: ubuntu-latest
