--- a/.github/workflows/01-code-quality.yml
+++ b/.github/workflows/01-code-quality.yml
@@ -5,6 +5,10 @@ on:
     - cron: '0 0 * * *'  # Run at midnight every day
   workflow_dispatch:  # Allow manual triggering
 
+# Define minimal permissions required for this workflow
+permissions:
+  contents: read  # Only need read access to repository contents
+
 jobs:
   lint:
     name: Code Quality Check
