--- a/.github/workflows/02-unit-tests.yml
+++ b/.github/workflows/02-unit-tests.yml
@@ -5,6 +5,11 @@ on:
     - cron: '0 0 * * *'  # Run at midnight every day
   workflow_dispatch:  # Allow manual triggering
 
+# Define minimal permissions required for this workflow
+permissions:
+  contents: read  # Only need read access to repository contents
+  actions: read   # For reading workflow runs
+
 jobs:
   test:
     name: Run Unit Tests
