--- a/.github/workflows/daily-tests.yml
+++ b/.github/workflows/daily-tests.yml
@@ -5,6 +5,11 @@ on:
     - cron: '0 0 * * *'  # Run daily at midnight
   workflow_dispatch:  # Allow manual triggering
 
+# Define minimal permissions required for this workflow
+permissions:
+  contents: read  # Only need read access to repository contents
+  actions: read   # For reading workflow runs
+
 jobs:
   backend-tests:
     runs-on: ubuntu-latest
