--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -5,6 +5,12 @@ on:
     - cron: '0 0 * * *'  # Run daily at midnight
   workflow_dispatch:  # Allow manual triggering
 
+# Define minimal permissions required for this workflow
+permissions:
+  contents: read  # Only need read access to repository contents
+  actions: read   # For reading workflow runs
+  security-events: write  # For uploading security scan results
+
 jobs:
   security-scan:
     runs-on: ubuntu-latest
