--- a/requirements.txt
+++ b/requirements.txt
@@ -50,7 +50,7 @@ openai==1.30.1
 anthropic==0.23.0
 google-generativeai==0.8.4
 tiktoken==0.6.0
-langchain==0.3.19
+langchain==0.3.20  # Updated to latest version
 langchain-community==0.4.0  # Updated to fix CVE-2024-8309, CVE-2024-2965, CVE-2024-46946
 transformers==4.50.0
 sentence-transformers==3.3.1
