--- a/temp-openwebui/backend/requirements.txt
+++ b/temp-openwebui/backend/requirements.txt
@@ -40,7 +40,7 @@ anthropic
 google-generativeai==0.8.4
 tiktoken
 
-langchain==0.3.19
+langchain==0.3.20  # Updated to latest version
 langchain-community==0.4.0  # Updated to fix CVE-2024-8309, CVE-2024-2965, CVE-2024-46946
 
 fake-useragent==2.1.0
