--- a/tactical_capabilities/sentinel_beacon/requirements.txt
+++ b/tactical_capabilities/sentinel_beacon/requirements.txt
@@ -5,7 +5,7 @@ sqlalchemy==2.0.27
 asyncpg==0.29.0
 pyjwt==2.10.1  # Updated from 2.8.0 for security fixes
 passlib==1.7.4
-python-multipart==0.0.20  # Updated from 0.0.18 to fix CVE-2024-53981
+python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-53981
 httpx==0.27.0  # Updated from 0.26.0 for security fixes
 python-dotenv==1.0.0
 pika==1.3.2
@@ -16,7 +16,7 @@ protobuf==4.25.1
 bleak==0.21.1
 pymap3d==3.0.1
 geopy==2.4.1
-cryptography==45.0.0  # Updated from 44.0.1 to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
+cryptography==46.0.0  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
 pytest==7.4.4
 pytest-asyncio==0.23.5
 pytest-mock==3.12.0
