--- a/tactical_capabilities/tacs/requirements.txt
+++ b/tactical_capabilities/tacs/requirements.txt
@@ -9,7 +9,7 @@ alembic==1.13.1
 # python-jose==3.4.0
 pyjwt==2.10.1
 passlib==1.7.4
-python-multipart==0.0.20  # Updated from 0.0.18 to fix CVE-2024-53981
+python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-53981
 aiofiles==23.2.1
 numpy==1.26.4
 scipy==1.12.0
