--- a/drone_swarm_system/requirements.txt
+++ b/drone_swarm_system/requirements.txt
@@ -4,7 +4,7 @@ pydantic==2.11.3
 sqlalchemy==2.0.38
 alembic==1.14.0
 psycopg2-binary==2.9.9
-python-multipart==0.0.20  # Updated from 0.0.9 to fix CVE-2024-53981
+python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-53981
 aiofiles==23.2.0
 numpy==1.26.4
 redis==5.0.3
@@ -24,6 +24,6 @@ APScheduler==3.10.4
 loguru==0.7.2
 python-dotenv==1.0.1
 paho-mqtt==2.2.1
-cryptography==45.0.0  # Updated from 44.0.1 to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
+cryptography==46.0.0  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
 pyopenssl==24.0.0
 python-magic==0.4.27
