Update pydantic to latest version 2.11.4 across all modules

--- a/anti_jamming_service/requirements.txt
+++ b/anti_jamming_service/requirements.txt
@@ -2,7 +2,7 @@
 fastapi==0.115.7
 uvicorn==0.34.0
 starlette==0.40.0
-pydantic==2.11.3
+pydantic==2.11.4  # Updated to latest version
 
 # Hardware interfaces
 pyrtlsdr==0.2.93
