--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 # FastAPI
 fastapi==0.115.7
 uvicorn==0.34.0
-pydantic==2.11.3
+pydantic==2.11.4  # Updated to latest version
 email-validator==2.1.1
 python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-53981
 
