--- a/drone_swarm_system/requirements.txt
+++ b/drone_swarm_system/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.115.7
 uvicorn[standard]==0.34.0
-pydantic==2.11.3
+pydantic==2.11.4  # Updated to latest version
 sqlalchemy==2.0.38
 alembic==1.14.0
 psycopg2-binary==2.9.9
