--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 typer==0.9.0
 fastapi==0.115.7
 uvicorn[standard]==0.34.0
-pydantic==2.11.3
+pydantic==2.11.4  # Updated to latest version
 email-validator==2.1.1
 python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-53981
 asgiref==3.8.1
