--- a/sentinelweb/requirements.txt
+++ b/sentinelweb/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.115.7
 uvicorn[standard]==0.34.0
-pydantic==2.11.3
+pydantic==2.11.4  # Updated to latest version
 python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-53981
 
 python-socketio==5.13.0
