--- a/tactical_capabilities/sigint_service/requirements.txt
+++ b/tactical_capabilities/sigint_service/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.110.0
 uvicorn==0.27.1
-pydantic==2.6.1
+pydantic==2.11.4  # Updated to latest version
 sqlalchemy==2.0.27
 asyncpg==0.29.0
 pyjwt==2.10.1  # Updated from 2.8.0 for security fixes
