--- a/tactical_capabilities/tacs/requirements.txt
+++ b/tactical_capabilities/tacs/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.109.2
 uvicorn==0.27.1
-pydantic==2.11.3
+pydantic==2.11.4  # Updated to latest version
 sqlalchemy==2.0.28
 asyncpg==0.29.0
 psycopg2-binary==2.9.9
