--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -26,7 +26,7 @@ websockets==12.0
 # Security
 cryptography==46.0.0  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
 pyopenssl==24.0.0
-certifi==2024.7.4  # Pinned version
+certifi==2024.10.5  # Updated to latest version
 python-magic==0.4.27
 
 # Utils
