--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,7 +20,7 @@ argon2-cffi==23.1.0
 
 # Networking
 httpx==0.27.0
-redis==5.0.3
+redis==5.0.4  # Updated to latest version
 websockets==12.0
 
 # Security
