--- a/drone_swarm_system/requirements.txt
+++ b/drone_swarm_system/requirements.txt
@@ -7,7 +7,7 @@ psycopg2-binary==2.9.9
 python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-53981
 aiofiles==23.2.0
 numpy==1.26.4
-redis==5.0.3
+redis==5.0.4  # Updated to latest version
 websockets==12.0
 # Replacing python-jose with PyJWT due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
 # python-jose[cryptography]==3.3.0
