--- a/security/requirements.txt
+++ b/security/requirements.txt
@@ -19,7 +19,7 @@ bandit==1.7.8
 safety==3.0.1
 pydantic-settings==2.2.1
 python-dotenv==1.0.1
-redis==5.0.3
+redis==5.0.4  # Updated to latest version
 httpx==0.27.0
 itsdangerous==2.2.0
 secure==0.3.0
