--- a/sentinelweb/requirements.txt
+++ b/sentinelweb/requirements.txt
@@ -25,7 +25,7 @@ PyMySQL==1.1.1
 bcrypt==4.3.0
 
 pymongo==4.7.1  # Pinned to secure version
-redis==5.0.3  # Pinned to secure version
+redis==5.0.4  # Updated to latest version
 boto3==1.35.53
 
 argon2-cffi==23.1.0
