--- a/tactical_capabilities/isr_service/requirements.txt
+++ b/tactical_capabilities/isr_service/requirements.txt
@@ -11,7 +11,7 @@ python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-53981
 httpx==0.27.0  # Updated from 0.26.0 for security fixes
 python-dotenv==1.0.0
 pika==1.3.2
-redis==5.0.1
+redis==5.0.4  # Updated to latest version
 numpy==1.26.3
 opencv-python-headless==4.9.0.80
 pillow==11.2.1  # Updated from 10.3.0 to fix CVE-2024-28219, CVE-2023-50447
