--- a/tactical_capabilities/sentinel_beacon/requirements.txt
+++ b/tactical_capabilities/sentinel_beacon/requirements.txt
@@ -9,7 +9,7 @@ python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-53981
 httpx==0.27.0  # Updated from 0.26.0 for security fixes
 python-dotenv==1.0.0
 pika==1.3.2
-redis==5.0.1
+redis==5.0.4  # Updated to latest version
 meshtastic==2.2.15
 pyserial==3.5
 protobuf==4.25.1
