--- a/tactical_capabilities/sigint_service/requirements.txt
+++ b/tactical_capabilities/sigint_service/requirements.txt
@@ -9,7 +9,7 @@ python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-53981
 httpx==0.27.0  # Updated from 0.26.0 for security fixes
 python-dotenv==1.0.0
 pika==1.3.2
-redis==5.0.1
+redis==5.0.4  # Updated to latest version
 numpy==1.26.3
 scipy==1.12.0
 matplotlib==3.8.2
