--- a/tactical_capabilities/tacs/requirements.txt
+++ b/tactical_capabilities/tacs/requirements.txt
@@ -14,7 +14,7 @@ aiofiles==23.2.1
 numpy==1.26.4
 scipy==1.12.0
 aio-pika==9.3.1
-redis==5.0.1
+redis==5.0.4  # Updated to latest version
 boto3==1.34.69
 matplotlib==3.8.3
 httpx==0.27.0
