--- a/security/requirements.txt
+++ b/security/requirements.txt
@@ -24,7 +24,7 @@ httpx==0.27.0
 itsdangerous==2.2.0
 secure==0.3.0
 email-validator==2.1.1
-aiofiles==23.2.0
+aiofiles==23.2.1  # Updated to latest version
 loguru==0.7.2
 prometheus-client==0.20.0
 structlog==24.1.0
