--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,7 +13,7 @@ psycopg2-binary==2.9.9
 # Authentication
 # Replacing python-jose with PyJWT due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
 # python-jose==3.4.0
-pyjwt==2.10.1
+pyjwt==2.10.2  # Updated to latest version
 passlib==1.7.4
 bcrypt==4.1.2
 argon2-cffi==23.1.0
