--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ redis==5.0.4  # Updated to latest version
 # Authentication
 # Replacing python-jose with PyJWT due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
 # python-jose[cryptography]==3.3.0
-pyjwt==2.10.1
+pyjwt==2.10.2  # Updated to latest version
 passlib[bcrypt]==1.7.4
 bcrypt==4.3.0
 argon2-cffi==23.1.0
@@ -38,7 +38,7 @@ certifi==2024.10.5  # Updated to latest version
 python-magic==0.4.27
 
 # Utils
-python-dotenv==1.0.1
+python-dotenv==1.0.1  # Latest version
 aiofiles==23.2.1  # Updated to latest version
 aiocache==0.12.2
 APScheduler==3.10.4
