Update python-multipart to version 0.0.21 in all modules

--- a/ai_detection/requirements.txt
+++ b/ai_detection/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.115.7  # Pinned version for security
 uvicorn[standard]==0.34.0  # Pinned version for security
 pydantic==2.11.3  # Pinned version for security
-python-multipart==0.0.18  # Secure version
+python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-53981
 
 # Security
 cryptography==45.0.0  # Updated from 44.0.1 to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
