--- a/ai_analytics/requirements.txt
+++ b/ai_analytics/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.115.7  # Pinned version for security
 uvicorn==0.34.0  # Pinned version for security
 pydantic==2.11.3  # Pinned version for security
-python-multipart==0.0.18  # Updated to fix CVE-2024-53981
+python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-53981
 numpy>=1.24.0
 opencv-python>=4.7.0
 PyYAML>=6.0
