--- a/sentinelweb/backend/requirements.txt
+++ b/sentinelweb/backend/requirements.txt
@@ -81,7 +81,7 @@ sentencepiece
 soundfile==0.13.1
 azure-ai-documentintelligence==1.0.0
 
-pillow==11.1.0
+pillow==11.2.1  # Updated to fix CVE-2024-28219, CVE-2023-50447
 opencv-python-headless==4.11.0.86
 rapidocr-onnxruntime==1.3.24
 rank-bm25==0.2.2
