--- a/ai_analytics/requirements.txt
+++ b/ai_analytics/requirements.txt
@@ -1,4 +1,4 @@
-fastapi==0.115.7  # Pinned version for security
+fastapi==0.115.12  # Updated to latest version
 uvicorn==0.34.0  # Pinned version for security
 pydantic==2.11.3  # Pinned version for security
 python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-53981
