--- a/anti_jamming_service/requirements.txt
+++ b/anti_jamming_service/requirements.txt
@@ -1,5 +1,5 @@
 # FastAPI and web server
-fastapi==0.115.7
+fastapi==0.115.12  # Updated to latest version
 uvicorn==0.34.0
 starlette==0.41.3  # Updated to fix CVE-2024-47874
 pydantic==2.11.4  # Updated to latest version
