--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 # FastAPI
-fastapi==0.115.7
+fastapi==0.115.12  # Updated to latest version
 uvicorn==0.34.0
 pydantic==2.11.4  # Updated to latest version
 email-validator==2.1.1
