--- a/security/requirements.txt
+++ b/security/requirements.txt
@@ -1,4 +1,4 @@
-fastapi==0.115.7
+fastapi==0.115.12  # Updated to latest version
 uvicorn[standard]==0.34.0
 pydantic==2.11.4  # Updated to latest version
 sqlalchemy==2.0.38
