--- a/sentinelweb/backend/requirements.txt
+++ b/sentinelweb/backend/requirements.txt
@@ -1,4 +1,4 @@
-fastapi==0.115.7
+fastapi==0.115.12  # Updated to latest version
 uvicorn[standard]==0.34.0
 pydantic==2.10.6
 python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-53981
