--- a/tactical_capabilities/tacs/requirements.txt
+++ b/tactical_capabilities/tacs/requirements.txt
@@ -1,4 +1,4 @@
-fastapi==0.109.2
+fastapi==0.115.12  # Updated to latest version
 uvicorn==0.27.1
 pydantic==2.11.4  # Updated to latest version
 sqlalchemy==2.0.28
