--- a/tactical_capabilities/isr_service/helm/values.yaml
+++ b/tactical_capabilities/isr_service/helm/values.yaml
@@ -69,13 +69,13 @@ config:
 
 secrets:
   postgres:
-    user: postgres
-    password: postgres
+    user: placeholderusername
+    password: placeholderpassword
   jwt:
-    secret: supersecretkey
+    secret: ""  # Generate with: openssl rand -hex 32
   rabbitmq:
-    username: guest
-    password: guest
+    username: placeholderusername
+    password: placeholderpassword
   redis:
     password: ""
 
