--- a/tactical_capabilities/sentinel_beacon/kubernetes/secrets.yaml
+++ b/tactical_capabilities/sentinel_beacon/kubernetes/secrets.yaml
@@ -6,9 +6,9 @@ metadata:
 type: Opaque
 data:
   # These are example values - in production, use proper secret management
-  postgres_user: cG9zdGdyZXM=  # postgres
-  postgres_password: cG9zdGdyZXM=  # postgres
-  jwt_secret: c3VwZXJzZWNyZXRrZXk=  # supersecretkey
-  rabbitmq_username: Z3Vlc3Q=  # guest
-  rabbitmq_password: Z3Vlc3Q=  # guest
+  postgres_user: cGxhY2Vob2xkZXJ1c2VybmFtZQ==  # placeholderusername
+  postgres_password: cGxhY2Vob2xkZXJwYXNzd29yZA==  # placeholderpassword
+  jwt_secret: ""  # Generate with: openssl rand -hex 32 | base64
+  rabbitmq_username: cGxhY2Vob2xkZXJ1c2VybmFtZQ==  # placeholderusername
+  rabbitmq_password: cGxhY2Vob2xkZXJwYXNzd29yZA==  # placeholderpassword
   meshtastic_channel_psk: ""  # Optional encryption key
