--- a/drone_show_service/kubernetes/secrets.yaml
+++ b/drone_show_service/kubernetes/secrets.yaml
@@ -5,8 +5,9 @@ metadata:
   namespace: bulocloud-sentinel
 type: Opaque
 data:
-  database-url: cG9zdGdyZXNxbCthc3luY3BnOi8vcG9zdGdyZXM6cG9zdGdyZXNAZGItZHJvbmUtc2hvdy5idWxvY2xvdWQtc2VudGluZWwuc3ZjLmNsdXN0ZXIubG9jYWw6NTQzMi9kcm9uZV9zaG93  # postgresql+asyncpg://postgres:postgres@db-drone-show.bulocloud-sentinel.svc.cluster.local:5432/drone_show
+  # These are example values - in production, use proper secret management
+  database-url: cG9zdGdyZXNxbCthc3luY3BnOi8vcGxhY2Vob2xkZXJ1c2VybmFtZTpwbGFjZWhvbGRlcnBhc3N3b3JkQGRiLWRyb25lLXNob3cuYnVsb2Nsb3VkLXNlbnRpbmVsLnN2Yy5jbHVzdGVyLmxvY2FsOjU0MzIvZHJvbmVfc2hvdw==  # postgresql+asyncpg://placeholderusername:placeholderpassword@db-drone-show.bulocloud-sentinel.svc.cluster.local:5432/drone_show
   redis-url: cmVkaXM6Ly9yZWRpcy1kcm9uZS1zaG93LmJ1bG9jbG91ZC1zZW50aW5lbC5zdmMuY2x1c3Rlci5sb2NhbDo2Mzc5LzA=  # redis://redis-drone-show.bulocloud-sentinel.svc.cluster.local:6379/0
-  minio-access-key: bWluaW9hZG1pbg==  # minioadmin
-  minio-secret-key: bWluaW9hZG1pbg==  # minioadmin
-  sentinel-api-token: eW91ci1zZW50aW5lbC1hcGktdG9rZW4=  # your-sentinel-api-token
+  minio-access-key: cGxhY2Vob2xkZXJ1c2VybmFtZQ==  # placeholderusername
+  minio-secret-key: cGxhY2Vob2xkZXJwYXNzd29yZA==  # placeholderpassword
+  sentinel-api-token: ""  # Generate a secure token and encode in base64
