--- a/indoor_drone_system/slam/requirements.txt
+++ b/indoor_drone_system/slam/requirements.txt
@@ -11,3 +11,10 @@ scikit-learn>=1.2.0
 pyquaternion>=0.9.9
 transforms3d>=0.4.1
 pangolin>=0.6
+argon2-cffi==23.1.0  # For secure password hashing
+pydantic==2.11.4  # For secure data validation
+python-magic==0.4.27  # For secure file type detection
+safety==2.3.5  # For dependency vulnerability scanning
+bandit==1.7.7  # For security static analysis
+cryptography==46.0.0  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
+pyopenssl==24.0.0  # Secure version
