--- a/model_hub_service/requirements.txt
+++ b/model_hub_service/requirements.txt
@@ -27,3 +27,10 @@ structlog>=23.1.0
 pytest>=7.4.2
 pytest-asyncio>=0.21.1
 httpx>=0.25.0
+argon2-cffi==23.1.0  # For secure password hashing
+pydantic==2.11.4  # For secure data validation
+python-magic==0.4.27  # For secure file type detection
+safety==2.3.5  # For dependency vulnerability scanning
+bandit==1.7.7  # For security static analysis
+cryptography==46.0.0  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
+pyopenssl==24.0.0  # Secure version
