--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -18,3 +18,8 @@ types-PyYAML==6.0.12.20240311
 types-redis==4.6.0.20240311
 types-setuptools==69.2.0.20240714
 types-urllib3==1.26.25.14
+argon2-cffi==23.1.0  # For secure password hashing
+pydantic==2.11.4  # For secure data validation
+python-magic==0.4.27  # For secure file type detection
+cryptography==46.0.0  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
+pyopenssl==24.0.0  # Secure version
