--- a/requirements-secure.txt
+++ b/requirements-secure.txt
@@ -11,3 +11,8 @@ pre-commit==3.3.3
 
 # Include all regular requirements
 -r requirements.txt
+argon2-cffi==23.1.0  # For secure password hashing
+pydantic==2.11.4  # For secure data validation
+python-magic==0.4.27  # For secure file type detection
+cryptography==46.0.0  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
+pyopenssl==24.0.0  # Secure version
