--- a/sentinelweb/requirements.txt
+++ b/sentinelweb/requirements.txt
@@ -1,11 +1,11 @@
-fastapi==0.115.12  # Updated to latest version
+fastapi==0.115.12  # Updated to latest version for security improvements  # Updated to latest version for security improvements  # Updated to latest version
 uvicorn[standard]==0.34.0
 pydantic==2.11.4  # Updated to latest version
-python-multipart==0.0.20  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-53981
+python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-53981
 
 python-socketio==5.13.0
 # Removing python-jose due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
-# # python-jose==3.4.0  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
+# # # # python-jose==3.4.0  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
 pyjwt==2.8.0  # Using a secure version that doesn't have CVE-2024-53861  # Downgraded to fix CVE-2024-53861
 passlib[bcrypt]==1.7.4
 
@@ -51,3 +51,8 @@ gpxpy==1.5.0
 httpx==0.27.0  # Updated from 0.24.0 for security
 websockets==12.0  # Updated from 11.0.3 for security
 python-dotenv==1.0.1  # Updated from 1.0.0 for security
+python-magic==0.4.27  # For secure file type detection
+safety==2.3.5  # For dependency vulnerability scanning
+bandit==1.7.7  # For security static analysis
+cryptography==46.0.0  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
+pyopenssl==24.0.0  # Secure version
