--- a/sim/requirements.txt
+++ b/sim/requirements.txt
@@ -48,3 +48,10 @@ pyopengl>=3.1.7
 torch>=2.2.2
 torchvision>=0.17.0
 tinygrad>=0.9.0
+argon2-cffi==23.1.0  # For secure password hashing
+pydantic==2.11.4  # For secure data validation
+python-magic==0.4.27  # For secure file type detection
+safety==2.3.5  # For dependency vulnerability scanning
+bandit==1.7.7  # For security static analysis
+cryptography==46.0.0  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
+pyopenssl==24.0.0  # Secure version
