--- a/tactical_capabilities/isr_service/requirements.txt
+++ b/tactical_capabilities/isr_service/requirements.txt
@@ -1,13 +1,13 @@
-fastapi==0.115.12  # Updated to latest version
+fastapi==0.115.12  # Updated to latest version for security improvements  # Updated to latest version for security improvements  # Updated to latest version
 uvicorn==0.27.1
 pydantic==2.11.4  # Updated to latest version
 sqlalchemy==2.0.27
 asyncpg==0.29.0
 # Replacing python-jose with PyJWT due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
-# # python-jose==3.4.0  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
+# # # # python-jose==3.4.0  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
 pyjwt==2.8.0  # Using a secure version that doesn't have CVE-2024-53861  # Downgraded to fix CVE-2024-53861
 passlib==1.7.4
-python-multipart==0.0.20  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-53981
+python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-53981
 httpx==0.27.0  # Updated from 0.26.0 for security fixes
 python-dotenv==1.0.0
 pika==1.3.2
@@ -20,3 +20,8 @@ pyproj==3.6.1
 cryptography==46.0.0  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
 pytest==7.4.4
 pytest-asyncio==0.23.5
+argon2-cffi==23.1.0  # For secure password hashing
+python-magic==0.4.27  # For secure file type detection
+safety==2.3.5  # For dependency vulnerability scanning
+bandit==1.7.7  # For security static analysis
+pyopenssl==24.0.0  # Secure version
