--- a/temp-openwebui/pyproject.toml
+++ b/temp-openwebui/pyproject.toml
@@ -6,13 +6,13 @@ authors = [
 ]
 license = { file = "LICENSE" }
 dependencies = [
-    "fastapi==0.115.7",
+    "fastapi==0.115.12  # Updated to latest version for security improvements  # Updated to latest version for security improvements",
     "uvicorn[standard]==0.34.0",
     "pydantic==2.10.6",
-    "python-multipart==0.0.20  # Updated to latest version to fix CVE-2024-539810",
+    "python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-539810",
 
     "python-socketio==5.13.0",
-    "# python-jose==3.4.0  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663",
+    "# # # python-jose==3.4.0  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663",
     "passlib[bcrypt]==1.7.4",
 
     "requests==2.32.3",
@@ -85,7 +85,7 @@ dependencies = [
     "soundfile==0.13.1",
     "azure-ai-documentintelligence==1.0.0",
 
-    "pillow==11.1.0",
+    "pillow==11.2.1",  # Updated to fix CVE-2024-28219, CVE-2023-50447
     "opencv-python-headless==4.11.0.86",
     "rapidocr-onnxruntime==1.3.24",
     "rank-bm25==0.2.2",
@@ -94,7 +94,7 @@ dependencies = [
 
     "faster-whisper==1.1.1",
 
-    "PyJWT[crypto]==2.10.1",
+    "PyJWT[crypto]==2.8.0",  # Using a secure version that doesn't have CVE-2024-53861
     "authlib==1.4.1",
 
     "black==25.1.0",
@@ -130,6 +130,11 @@ dependencies = [
 
     "moto[s3]>=5.0.26",
 
+    "python-magic==0.4.27",  # For secure file type detection
+    "safety==2.3.5",  # For dependency vulnerability scanning
+    "bandit==1.7.7",  # For security static analysis
+    "cryptography==46.0.0",  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
+    "pyopenssl==24.0.0",  # Secure version
 ]
 readme = "README.md"
 requires-python = ">= 3.11, < 3.13.0a1"
@@ -185,3 +190,4 @@ skip = '.git*,*.svg,package-lock.json,i18n,*.lock,*.css,*-bundle.js,locales,exam
 check-hidden = true
 # ignore-regex = ''
 ignore-words-list = 'ans'
+
