--- a/weather_guard/pyproject.toml
+++ b/weather_guard/pyproject.toml
@@ -19,16 +19,23 @@ classifiers = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi>=0.104.0",
-    "uvicorn>=0.23.2",
-    "httpx>=0.25.0",
-    "redis>=5.0.0",
-    "pydantic>=2.4.2",
+    "fastapi>=0.115.12",
+    "uvicorn>=0.34.0",
+    "httpx>=0.27.0",
+    "redis>=5.0.4",
+    "pydantic>=2.11.4",
     "pydantic-settings>=2.0.3",
     "aiomqtt>=1.2.0",
-    "python-jose>=3.3.0",
-    "python-multipart>=0.0.6",
+    # "python-jose>=3.3.0",  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
+    "pyjwt>=2.8.0",  # Using a secure version that doesn't have CVE-2024-53861
+    "python-multipart>=0.0.21",  # Updated to latest version to fix CVE-2024-53981
     "prometheus-client>=0.17.0",
+    "argon2-cffi>=23.1.0",  # For secure password hashing
+    "python-magic>=0.4.27",  # For secure file type detection
+    "cryptography>=46.0.0",  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
+    "pyopenssl>=24.0.0",  # Secure version
+    "safety>=2.3.5",  # For dependency vulnerability scanning
+    "bandit>=1.7.7",  # For security static analysis
 ]
 
 [project.optional-dependencies]
@@ -64,3 +71,10 @@ disallow_incomplete_defs = true
 testpaths = ["tests"]
 python_files = "test_*.py"
 python_functions = "test_*"
+argon2-cffi==23.1.0  # For secure password hashing
+pydantic==2.11.4  # For secure data validation
+python-magic==0.4.27  # For secure file type detection
+safety==2.3.5  # For dependency vulnerability scanning
+bandit==1.7.7  # For security static analysis
+cryptography==46.0.0  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
+pyopenssl==24.0.0  # Secure version
